tests/syntax/bad/testfile-constant_too_large-2.scala

class A { var x = -2147483649 }



object Main { def main(args: Array[String]) { } }
